# agent_collab

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  agent_collab.sh  agent_collab_dev.sh  pyproject.toml
.agent-collab/: config.toml
.claude-plugin/: marketplace.json
.claude/skills/cli-scripting/: SKILL.md
.claude/skills/github-issues/: SKILL.md
.claude/skills/release/: SKILL.md
.codex-plugin/: plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
agent_collab/: __init__.py  api_schema.py  backend_contract.py  cli.py  cli_output.py  client.py  config.py  config_migrations.py  daemon.py  daemon_autostart.py  daemon_supervisor.py  default_config.toml  durations.py  events.py  install_readiness.py  logging.py  mcp-guidance.md  mcp_server.py  mcp_tools.py  model_catalog.py  net.py  options.py  outcomes.py  paths.py  project_build.py  project_setup.py  referee.py  retention.py  runners.py  server_http.py  session_index.py  skill_install.py  terminal.py  tui.py  tui_core.py  usage_windows.py  user_install.py  watch.py
agent_collab/backends/: __init__.py  antigravity_sdk.py  base.py  claude_sdk.py  cli.py  codex_sdk.py  health.py  sdk_common.py
agent_collab/backends/antigravity_cli/: README.md  __init__.py  backend.py  defaults.toml  options.toml  parser.py
agent_collab/backends/antigravity_sdk/: README.md  __init__.py  backend.py  config.toml  defaults.toml  options.toml
agent_collab/backends/claude_cli/: README.md  __init__.py  backend.py  defaults.toml  options.toml  parser.py
agent_collab/backends/claude_sdk/: README.md  __init__.py  backend.py  defaults.toml  options.toml
agent_collab/backends/codex_cli/: README.md  __init__.py  backend.py  defaults.toml  options.toml  parser.py
agent_collab/backends/codex_sdk/: README.md  __init__.py  backend.py  defaults.toml  (+1 more)
agent_collab/config_migrations/: __init__.py  base.py  scope.py  v1_to_v2.py  v2_to_v3.py  v3_to_v4.py  v4_to_v5.py  v5_to_v6.py  v6_to_v7.py  v7_to_v8.py  v8_to_v9.py  v9_to_v10.py  writeback.py
doc/: README.md  agent-configuration.md  daemon-architecture.md  development.md  event-windows.md  implementation-notes.md  mcp-guidance.md  runtime-layout.md
doc/daemon_api_doc/: http-api.md  openapi.json
doc/tasks_closed/: README.md  backend-discovery-and-recommendation.md  backend-first-config.md  backend-owned-defaults.md  backend-turn-outcomes.md  cross-agent-review-skills.md  daemon-autostart-and-user-install.md  daemon-permanent-config-token.md  dynamic-backend-model-discovery.md  go-public-checklist.md  install-backend-readiness-summary.md  parallel-review-workflow.md  read-only-backend-permission-defaults.md  session-retention-and-pruning.md  stage-1-watch.md  stage-1.5-agent-config.md  stage-2-daemon-api.md  stage-3-cli-client.md  stage-4-mcp-daemon-adapter.md  stage-4.25-foreground-streamable-http-server.md  stage-4.5-tui-watch.md  stage-4.6-interactive-referee.md  stage-4.75-daemonize-and-session-options.md  stage-4.8-global-runtime-and-config-migrations.md  stage-4.9-pluggable-agent-backends.md  stage-5.1-backend-packages-and-integration-tests.md  stage-5.1-first-class-sdk-backends-remediation.md  stage-5.1-first-class-sdk-backends.md  stage-5.1.1-xai-provider.md  stage-5.3-daemon-api-contract.md  stage-5.4-daemon-robustness-and-code-health.md  usage-window-alignment.md  workdir-limits-and-workspace-trust.md  workflow-member-selection.md
doc/tasks_open/: backend-discovery-and-recommendation.md  backend-first-config.md  backend-live-verification-and-preference-policy.md  backend-turn-outcomes.md  cross-agent-review-skills.md  daemon-permanent-config-token.md  dynamic-backend-model-discovery.md  go-public-checklist.md  install-backend-readiness-summary.md  install-ux-simplification.md  parallel-review-workflow.md  sdk-session-control.md  session-retention-and-pruning.md  stage-4.25-foreground-streamable-http-server.md  stage-4.5-tui-watch.md  stage-4.6-interactive-referee.md  stage-4.8-global-runtime-and-config-migrations.md  stage-4.9-pluggable-agent-backends.md  stage-5-hardening.md  stage-5.1-first-class-sdk-backends-remediation.md  stage-5.1-first-class-sdk-backends.md  stage-5.1.1-xai-provider.md  stage-5.3-daemon-api-contract.md  stage-5.4-daemon-robustness-and-code-health.md  subagent-delegation-and-thread-continuity.md  usage-window-alignment.md  workdir-limits-and-workspace-trust.md  workflow-member-selection.md
integration_tests/: README.md  __init__.py  __main__.py  harness.py
integration_tests/backends/: __init__.py
scripts/: agent_collab_lib.sh
skills/agent-collab-dual-review/: SKILL.md
skills/agent-collab-solo-review/: SKILL.md
tests/: __init__.py  test_antigravity.py  test_api_schema.py  test_backend_claude_sdk.py  test_backend_codex_sdk.py  test_backend_contract.py  test_backend_health.py  test_backend_options.py  test_backend_sdk.py  test_backends.py  test_builtin_defaults.py  test_ci_tooling.py  test_cli_help.py  test_client_auth.py  test_config.py  test_config_migrations.py  test_daemon.py  test_daemon_autostart.py  test_daemon_cli.py  test_daemon_supervisor.py  test_default_posture.py  test_events.py  test_install_readiness.py  test_integration_harness.py  test_logging.py  test_mcp_server.py  test_model_catalog.py  test_net.py  test_options.py  test_outcomes.py  test_paths.py  test_project_build.py  test_project_setup.py  test_referee.py  test_retention.py  test_runners.py  test_sdk_live_smoke.py  test_server_http.py  test_session_index.py  test_sessions_cli.py  (+9 more)
tests/backends/: test_contract.py  test_model_discovery.py  test_options.py  test_parsers.py  test_registry.py
(+89 files in other folders)
