[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-collab"
version = "0.4.0"
description = "Local supervisor for bounded collaboration across configured AI agents."
readme = "README.md"
# Stage 5.1 makes the `sdk` backends first-class: the SDKs install with the
# project, so the base target is now Python 3.10+ (all three SDKs require it).
requires-python = ">=3.10"
authors = [{ name = "agent-collab prototype" }]
# First-class SDK backends. These are lazy-imported (only inside probe()/runner),
# so a missing wheel degrades to an unavailable backend rather than an import-time
# crash; the `cli` backend keeps working with the provider CLIs regardless.
# Ranges are bounded to the minor line verified during Stage 5.1 A1 on Python
# 3.12.13. Codex needs an explicit prerelease floor; 0.1.0b3 installs the pinned
# openai-codex-cli-bin 0.137.0a4 runtime dependency.
dependencies = [
    "claude-agent-sdk>=0.2.114,<0.3.0",
    "openai-codex>=0.1.0b3,<0.2.0",
    "google-antigravity>=0.1.5,<0.2.0",
    # Verified on Python 3.12.13: AsyncClient/chat.sample and deterministic
    # async context-manager cleanup in xai-sdk 1.17.0.
    "xai-sdk>=1.17,<2",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.20",
]

[project.scripts]
agent-collab = "agent_collab.cli:main"
agent-collab-mcp = "agent_collab.mcp_server:main"

[tool.setuptools.packages.find]
include = ["agent_collab*"]

[tool.setuptools.package-data]
agent_collab = [
    "default_config.toml",
    "backends/*/README.md",
    "backends/*/options.toml",
    "backends/*/config.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
