[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-collab"
version = "0.11.0"
description = "Local supervisor for bounded collaboration across configured AI agents."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
# Python 3.10+ is the base target; the optional vendor SDKs all require it.
requires-python = ">=3.10"
authors = [{ name = "agent-collab prototype" }]
# The base install is SDK-free: the `cli` backends drive the provider CLIs as
# subprocesses and need no vendor SDK. The `sdk` backends lazy-import their SDK
# (only inside probe()/runner), so a missing wheel degrades to an unavailable
# backend with an install hint rather than an import-time crash. Install a
# per-provider extra below (or `all`) to enable the matching `sdk` backend.
# tomlkit is the one small base dependency: install-time config migration
# rewrites the user config while preserving comments and formatting, which
# stdlib tomllib cannot do. It is lazy-imported only on the write-back path.
dependencies = [
    "tomlkit>=0.13,<1",
]

# SDK ranges are bounded to the compatible release lines verified on Python
# 3.12.13. The 2026-07-23 refresh covers Claude 0.2.126, Codex 0.144.4,
# Antigravity 0.1.7, and xAI 1.17.0, including the Codex/xAI model-list APIs.
# `all` must stay the exact union of the provider extras; a hermetic test
# enforces this.
[project.optional-dependencies]
claude = [
    "claude-agent-sdk>=0.2.126,<0.3.0",
]
codex = [
    "openai-codex>=0.144.4,<0.145.0",
]
antigravity = [
    "google-antigravity>=0.1.7,<0.2.0",
]
xai = [
    "xai-sdk>=1.17,<2",
]
all = [
    "claude-agent-sdk>=0.2.126,<0.3.0",
    "openai-codex>=0.144.4,<0.145.0",
    "google-antigravity>=0.1.7,<0.2.0",
    "xai-sdk>=1.17,<2",
]
dev = [
    "ruff==0.15.20",
]

[project.scripts]
agent-collab = "agent_collab.cli:main"

[tool.setuptools.packages.find]
include = ["agent_collab*"]

[tool.setuptools.package-data]
agent_collab = [
    "default_config.toml",
    "mcp-guidance.md",
    "backends/*/README.md",
    "backends/*/defaults.toml",
    "backends/*/options.toml",
    "backends/*/config.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
